<resources>
    <string name="app_name">Respiratory Disorders</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email">Email</string>
    <string name="predict">Predict</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="toggle_password_visibility">Toggle Password Visibility</string>
    <string name="mail">Email</string>
    <string name="respiratory_disorders">Respiratory Disorders</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="enter_weight">Enter Weight</string>
    <string name="respiratory_disorders_">Respiratory Disorders</string>
    <string name="back">Back</string>
    <string name="we_try_to_keep_you">We try to keep you</string>
    <string name="healthy">Healthy</string>
    <string name="lets_start">Lets Start</string>
    <string name="todo">TODO</string>
    <string name="__">Respiratory Disorders</string>
    <string name="create_account">Create Account</string>
    <string name="toggle_password_visibility_">Toggle Password Visibility</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="respiratory_disorder">Respiratory Disorders</string>
    <string name="gender">Gender:</string>
    <string name="age">Age:</string>
    <string name="enter_age">Enter Age</string>
    <string name="diagnosis_age">Diagnosis Age:</string>
    <string name="blood_group">Blood Group:</string>
    <string name="birth_order">Birth Order:</string>
    <string name="lifestlye">Lifestlye:</string>
    <string name="marital_status">Marital Status:</string>
    <string name="weight">Weight:</string>
    <string name="obesity">Obesity:</string>
    <string name="obesity_in_family">Obesity in Family:</string>
    <string name="fast_food">Fast Food:</string>
    <string name="smoking">Smoking:</string>
    <string name="high_bp">High BP:</string>
    <string name="diabetes">Diabetes:</string>
    <string name="respiratory_disorderss">Respiratory Disorders</string>
    <string name="get_started">Get Started</string>
    <string name="diabetes_">Diabetes:</string>
    <string name="high_bp_">High BP:</string>
    <string name="smoking_">Smoking:</string>
    <string name="fast_food_">Fast Food:</string>
    <string name="obesity_in_family_">Obesity in Family:</string>
    <string name="obesity_">Obesity:</string>
    <string name="weight_">Weight:</string>
    <string name="lifestyle">Lifestyle:</string>
    <string name="marital_status_">Marital Status:</string>
    <string name="birth_order_">Birth Order:</string>
    <string name="blood_group_">Blood Group:</string>
    <string name="diagnosis_age_">Diagnosis Age:</string>
    <string name="enter_age_">Enter Age</string>
    <string name="age_">Age:</string>
    <string name="gender_">Gender:</string>
    <string name="respiratory_disorde">Respiratory Disorders</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="reset_password_">Reset Password</string>

    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="diagnosis_age_options">
    <item>0–9 years</item>
    <item>10–19 years</item>
    <item>20–29 years</item>
    <item>30–39 years</item>
    <item>40–49 years</item>
    <item>50–59 years</item>
    <item>60–69 years</item>
    <item>70+ years</item>
    </string-array>

    <string-array name="blood_group_options">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

    <string-array name="birth_order_options">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>


    <string-array name="marital_status_options">
        <item>Married</item>
        <item>Unmarried</item>
    </string-array>


    <string-array name="lifestyle_options">
        <item>Very Active</item>
        <item>Moderately Active</item>
        <item>Slightly Active</item>
        <item>Inactive</item>
        <item>Not Specified</item>
    </string-array>


    <string-array name="obesity_options">
        <item>Yes</item>
        <item>No</item>
    </string-array>


    <string-array name="obesity_in_family_options">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <!-- Other arrays -->
    <string-array name="yes_no_options">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="smoking_options">
        <item>Smoker</item>
        <item>Non-Smoker</item>
    </string-array>

</resources>

