<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00293A"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/respiratory_disorder"
        android:textSize="40sp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#00B4FF"  />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:paddingBottom="70dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="15sp"
            android:textColor="#FFFF"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"/>

        <Spinner
            android:id="@+id/genderSpinner"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/spinner"
            android:entries="@array/gender_options" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="15sp"
            android:textColor="#FFFF"
            android:layout_marginStart="20dp" />
        <EditText
            android:id="@+id/age"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/spinner"
            android:hint="@string/enter_age"
            android:paddingStart="10dp"
            android:inputType="number" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diagnosis_age"
            android:textSize="15sp"
            android:textColor="#FFFF"
            android:layout_marginStart="20dp"/>

        <!-- Spinner for Diagnosis Age -->

        <Spinner
            android:id="@+id/diagnosisAgeSpinner"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:paddingStart="10dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/spinner"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blood_group"
            android:textSize="15sp"
            android:textColor="#FFFF"
            android:layout_marginStart="20dp" />

        <Spinner
            android:id="@+id/bloodGroupSpinner"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/spinner"
            android:entries="@array/blood_group_options" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/birth_order"
            android:textSize="15sp"
            android:textColor="#FFFF"
            android:layout_marginStart="20dp" />

        <Spinner
            android:id="@+id/birthOrderSpinner"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/spinner"
            android:entries="@array/birth_order_options" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/marital_status"
            android:textSize="15sp"
            android:textColor="#FFFF"
            android:layout_marginStart="20dp" />

        <Spinner
            android:id="@+id/maritalStatusSpinner"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/spinner"
            android:entries="@array/marital_status_options" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lifestlye"
            android:textSize="15sp"
            android:textColor="#FFFF"
            android:layout_marginStart="20dp" />

        <Spinner
            android:id="@+id/lifestyleSpinner"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/spinner"
            android:entries="@array/lifestyle_options" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textSize="15sp"
            android:textColor="#FFFF"
            android:layout_marginStart="20dp" />

        <EditText
            android:id="@+id/weight"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/spinner"
            android:hint="@string/enter_weight"
            android:paddingStart="10dp"
            android:inputType="number"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/obesity"
            android:textSize="15sp"
            android:textColor="#FFFF"
            android:layout_marginStart="20dp" />

        <Spinner
            android:id="@+id/obesitySpinner"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/spinner"
            android:entries="@array/obesity_options" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/obesity_in_family"
            android:textSize="15sp"
            android:textColor="#FFFF"
            android:layout_marginStart="20dp" />

        <!-- Spinner for Obesity In Family -->
        <Spinner
            android:id="@+id/obesityInFamilySpinner"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/spinner"
            android:entries="@array/obesity_in_family_options" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fast_food"
            android:textSize="15sp"
            android:textColor="#FFFF"
            android:layout_marginStart="20dp" />

        <Spinner
            android:id="@+id/fastFoodSpinner"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/spinner"
            android:entries="@array/obesity_options"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/smoking"
            android:textSize="15sp"
            android:textColor="#FFFF"
            android:layout_marginStart="20dp" />

        <!-- EditText for Smoking -->
        <Spinner
            android:id="@+id/smokingSpinner"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/spinner"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/high_bp"
            android:textSize="15sp"
            android:textColor="#FFFF"
            android:layout_marginStart="20dp" />


        <Spinner
            android:id="@+id/highBPSpinner"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/spinner"
            android:entries="@array/yes_no_options"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diabetes"
            android:textSize="15sp"
            android:textColor="#FFFF"
            android:layout_marginStart="20dp" />

        <!-- Diabetes Spinner -->
        <Spinner
            android:id="@+id/diabetesSpinner"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/spinner"
            android:entries="@array/yes_no_options" />

        <!-- Predict Button -->
        <Button
            android:id="@+id/predictButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#00B4FF"
            android:fontFamily="@font/andada"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/predict"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="#00293A"
            android:textSize="16sp" />

        <!-- TextView for Results -->
        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingTop="16dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </LinearLayout>
</ScrollView>
</LinearLayout>
