<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#00293A"
    android:padding="16dp"
    tools:context=".Signup">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/__"
        android:textSize="40sp"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#00B4FF" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"

        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#006088"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textSize="40sp"
                android:layout_marginTop="30dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="#FFFF" />


    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:autofillHints="True"
        android:hint="@string/mail"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:background="@drawable/edit_txt"
        android:drawableStart="@drawable/mail_ic"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="20dp"
        tools:ignore="RtlSymmetry"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:autofillHints="true"
            android:background="@drawable/edit_txt"
            android:drawableStart="@drawable/ps_ic"
            android:hint="@string/password"
            android:paddingStart="10dp"
            android:inputType="textPassword"
            tools:ignore="RtlSymmetry"  />

        <ImageView
            android:id="@+id/imageViewShowPassword"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignEnd="@id/passwordEditText"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/toggle_password_visibility_"
            android:src="@drawable/pwdh" />

    </RelativeLayout>


    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:backgroundTint="#00B4FF"
        android:foregroundTint="@color/white"
        android:paddingBottom="8dp"
        android:layout_margin="8dp"
        android:textAllCaps="false"
        android:textSize="16sp"  />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_log_in"
        android:layout_gravity="center"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="15dp"
        />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>



