<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/forgot"
    android:padding="16dp"
    android:background="#00293A">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#00B4FF"  />


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#006088"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_your_password"
                android:textSize="30sp"
                android:layout_marginTop="30dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="#FFFF" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/mail"
        android:paddingStart="10dp"
        android:background="@drawable/edit_txt"
        android:drawableStart="@drawable/mail_ic"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="20dp"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/buttonResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:backgroundTint="#00B4FF"
        android:foregroundTint="@color/white"
        android:paddingBottom="8dp"
        android:layout_margin="8dp"
        android:textAllCaps="false"
        android:layout_marginBottom="15dp"
        android:textSize="16sp"  />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
